WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95575
[Qt] ImageDiff output is not in the expected form if image dimensions differ
https://bugs.webkit.org/show_bug.cgi?id=95575
Summary
[Qt] ImageDiff output is not in the expected form if image dimensions differ
Balazs Kelemen
Reported
2012-08-31 08:11:34 PDT
This makes NRWT confused so it tries to read towards the stdout, than it reports that ImageDiff has timed out. We should put smg like 'diff: 100% failed' to the stdout, as it is done for mac and gtk (at least).
Attachments
Patch
(1.48 KB, patch)
2012-08-31 08:14 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2012-08-31 08:14:06 PDT
Created
attachment 161705
[details]
Patch
Csaba Osztrogonác
Comment 2
2012-08-31 08:24:22 PDT
Comment on
attachment 161705
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=161705&action=review
LGTM, r=me with some minor nit.
> Tools/ChangeLog:8 > + > +
nit: - an empty line :)
> Tools/DumpRenderTree/qt/ImageDiff.cpp:87 > + fputs("diff: 100%% failed\n", stdout);
Could you use fprintf as everywhere else?
Balazs Kelemen
Comment 3
2012-08-31 08:49:40 PDT
Landed in
http://trac.webkit.org/changeset/127268
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug