[Qt] ImageDiff output is not in the expected form if image dimensions differ https://bugs.webkit.org/show_bug.cgi?id=95575

Reviewed by Csaba Osztrogonác.

Output 100% difference in the case of differing image dimensions so
the test harness knows that we won't produce any output further.
This matches the behavior of other ports.

* DumpRenderTree/qt/ImageDiff.cpp:
(main):

git-svn-id: svn://svn.chromium.org/blink/trunk@127268 bbb929c8-8fbe-4397-9dbb-9b2b20218538