third_party/WebKit/Tools/DumpRenderTree/qt/ImageDiff.cpp
@@ -84,8 +84,10 @@ int main(int argc, char* argv[])
         if (!actualImage.isNull() && !baselineImage.isNull()) {
 
             if (actualImage.size() != baselineImage.size()) {
+                fprintf(stdout, "diff: 100%% failed\n");
                 fprintf(stderr, "error, test and reference image have different properties.\n");
                 fflush(stderr);
+                fflush(stdout);
             } else {
 
                 int w = actualImage.width();
